--- a/style.css
+++ b/style.css
@@ -48,16 +48,30 @@ table {
 }
 
 /* Global Stles */
+* {
+    box-sizing: border-box;
+}
+
+html {
+    font-family: 'Hind', sans-serif;
+}
+
 h1 {
     font-size: 4em;
+    font-family: 'Righteous', sans-serif;
+    color: #3b7ca8;
 }
 
 h2 {
     font-size: 3.5em;
+    font-family: 'Righteous', sans-serif;
+
 }
 
 h3 {
     font-size: 2.5em;
+    font-family: 'Rubik Mono One', sans-serif;
+
 }
 
 h4 {
@@ -86,7 +100,14 @@ nav ul li {
 }
 
 .hero-banner {
-    background-image: url('images/sunset.jpg');
+      background: 
+      /* top, transparent red */ 
+      linear-gradient(
+        rgba(25, 25, 25, .75), 
+        rgba(25, 25, 25, .75)
+      ),
+      /* bottom, image */
+      url('images/sunset.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 500px;
@@ -105,6 +126,117 @@ nav ul li {
     transform: translate(-50%, -50%);
 }
 
-/* .hero-text h1, .hero-text h5{
-    
-} */
+.hero-text h1, .hero-text h5{
+    margin: 0.75em 0;
+}
+
+.about {
+    margin: 3em auto;
+    padding: 2em;
+    text-align: center;
+}
+
+.about h2, .about h4 {
+    margin: 0.5em;
+}
+
+.about p {
+    margin: 2em 0;
+}
+
+.services {
+    margin: 3em auto;
+    padding: 2em;
+    text-align: center;
+    background-color: #191919;
+    color: white;
+}
+
+.services h2 {
+    margin: 0.5em 0;
+}
+
+.services figure {
+    display: inline-block;
+    margin: 2em 5em;
+}
+
+.services i {
+    font-size: 6em;
+}
+
+.services figcaption {
+    font-size: 2em;
+    margin: 0.5em 0;
+}
+
+.services span {
+    font-size: 1.25em;
+}
+
+.faq {
+    margin: 3em auto;
+    padding: 2em;
+}
+
+.faq ol {
+    margin: 2em 1em;
+    list-style: decimal;
+}
+
+.faq li {
+    margin: 2em 0;
+    font-weight: bold;
+
+}
+
+.contact {
+    margin: 3em auto 0 auto;
+    padding: 2em;
+    background-color: #191919;
+    text-align: center;
+    color: white;
+    width:100%;
+}
+
+.contact h2{
+    margin: 0.5em 0;
+}
+
+.contact p {
+    margin:1em;
+}
+
+form {
+    margin: 3em 0;
+}
+
+form input {
+    width:33%;
+    /* height:3em; */
+    border-radius: 15px;
+    border: none;
+    padding: 0.25em 1em;
+    font-size: 1.25em;
+}
+
+form input[type="submit"] {
+    display: block;
+    margin: 3em auto;
+    width: 100px;
+    font-size:1em;
+    border-radius: 15px;
+    border: none;
+    padding: 0.5em;
+}
+
+form label {
+    display: block;
+    margin: 1em 0;
+    font-size: 1.25em;
+}
+
+footer {
+    text-align: center;
+    padding: 2em;
+}
