--- a/style.css
+++ b/style.css
@@ -50,6 +50,12 @@ table {
 /* Global Stles */
 * {
     box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+
+a {
+    text-decoration: none;
+    color:white;
 }
 
 html {
